# gp-fvm

./: .gitignore  .gitmodules  LICENSE.txt  README.md  dev-requirements.txt  pyproject.toml
experiments/: .env.example  .gitignore  0001_visualize_heat_wave_benchmark.ipynb  0002_preconditioner_ablation.ipynb  0003_illustrate_collocation_vs_fvm.ipynb  0004_pdebench_figure.ipynb  0005_plot_tsunami.ipynb  0006_plot_action_matrix.ipynb  Makefile  requirements.txt
experiments/advection/: .gitignore  0001_tutorial_advection.ipynb  advection_utils.py  run_1d_advection_col.example.sh  run_1d_advection_col.py  run_1d_advection_fv.example.sh  run_1d_advection_fv.py
experiments/darcy/: .gitignore  darcy_utils.py  run_2d_darcy_col.example.sh  run_2d_darcy_col.py  run_2d_darcy_fv.example.sh  run_2d_darcy_fv.py
experiments/data/: .gitignore  23-11-23_sendai_coast.tif  23-11-23_sendai_coast_v2.tif  27-11-23_sendai_coast_v3.tif
experiments/heat/: 0001_tutorial_heat.ipynb  run_1d_heat_benchmark.py
experiments/tsunami/: 0001_data_visualization.ipynb  run_tsunami_with_bathymetry.py
experiments/wave/: 0001_tutorial_wave.ipynb  run_2d_wave_benchmark.py
src/gp_fvm/benchmark/: __init__.py  evaluate.py
src/gp_fvm/benchmark/hyperopt/: __init__.py  lengthscales.py
src/gp_fvm/finite_volumes/: __init__.py  grid.py
src/gp_fvm/plot/: __init__.py
src/gp_fvm/plot/dim1/: __init__.py  convenience.py  plot_function.py  plot_gp.py
src/gp_fvm/plot/dim2/: __init__.py  plot_function.py  plot_gp.py
src/gp_fvm/utils/: __init__.py  figure_manager.py
